# GNURadioFTDIBlock

./: README.md
gr-FTxxxRead/: CMakeLists.txt
gr-FTxxxRead/cmake/Modules/: FTxxxReadConfig.cmake
gr-FTxxxRead/docs/: README.FTxxxRead
gr-FTxxxRead/docs/doxygen/: Doxyfile.in
gr-FTxxxRead/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-FTxxxRead/examples/: GNURadioFTDITest.grc
gr-FTxxxRead/grc/: CMakeLists.txt  FTxxxRead_ftdi_read_source.xml
gr-FTxxxRead/include/FTxxxRead/: CMakeLists.txt  api.h  ftdi_read_source.h
gr-FTxxxRead/lib/: CMakeLists.txt  FiFo.h  ftdi_read_source_impl.cc  ftdi_read_source_impl.h  qa_FTxxxRead.cc  qa_FTxxxRead.h  test_FTxxxRead.cc
gr-FTxxxRead/python/: CMakeLists.txt  __init__.py  qa_ftdi_read_source.py
gr-FTxxxRead/swig/: CMakeLists.txt  FTxxxRead_swig.i
libftdi1-1.1/examples/: simple.c
